--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==2.3.3"
-flask-cors = "==4.0.0"
-flask-restx = "==1.2.0"
 flask-compress = "==1.14"
 flask-sqlalchemy = "==3.1.1"
 numpy = "==1.26.2"
 pandas = "==2.1.3"
 psycopg2-binary = "*"
 python-dotenv = "==1.0.0"
+flask = "*"
+flask-cors = "*"
+flask-restx = "*"
 
 [dev-packages]
 
